--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2710,6 +2710,7 @@ fieldset[disabled] .checkbox label {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
+  width: 90%;
 }
 select.input-sm {
   height: 30px;
