--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,6 +11,7 @@ html {
 }
 body {
   margin: 0;
+  /*background-image: url("../images/pikaBack.jpg");*/
 }
 article,
 aside,
@@ -262,10 +263,16 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-
+  
   src: url('../fonts/glyphicons-halflings-regular.eot');
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
+
+@font-face {
+           font-family: "Pokemon";
+           src: url('../fonts/pokemon.ttf') format("truetype");
+/*            src: url(http://www.example.org/mycustomfont.ttf) format("truetype");*/
+       }
 .glyphicon {
   position: relative;
   top: 1px;
@@ -1082,11 +1089,12 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Pokemon" , "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+  /*color: #333;*/
+    
+  /*background-color: #fff;*/
 }
 input,
 button,
