--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,23 @@ body {
   text-align: center;
 }
 
+.sideways {
+    -ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+    transform: rotate(90deg);
+}
+
+.spins {
+    top: 50%;
+    left: 50%;
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 .stat-bar {
   background: #000088;
   border-radius: .4em;
